@@ -1,0 +1,3 @@
+[TYPECHECK]
+ignore-mixin-members=yes
+mixin-class-rgx=.*[Mm]ixin
