@@ -74,6 +74,8 @@ Release date: TBA
 
   Closes #4981
 
+* Support configuring mixin class pattern via ``mixin-class-rgx``
+
 * Added new checker ``use-implicit-booleaness-not-comparison``: Emitted when
   collection literal comparison is being used to check for emptiness.
 
